--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       c-7.606-0.447-6.058-37.895-20.62-23.333c-10.167,10.166-15.972-0.747-25,12C119.547,443.568,121.798,416.515,111.547,415.233z
                               " />
         </path>
-        <rect id="plate" x="10" y="475.571" fill="#fefae9" width="180" height="4" />
+        <rect x="10" y="475.571" fill="#fefae9" width="180" height="4" />
       </svg>
     </div>
   </div>
